--- a/docs/style.css
+++ b/docs/style.css
@@ -1,11 +1,47 @@
-h1 {
-    color: blueviolet;
+.code-block {
+    width: 100%;
+    margin: 0 auto;
 }
-/*
+
+h1 {
+    color: darkcyan;
+    font-size:x-large;
+}
+
 h2 {
+    font-size: 22px;
+}
+
+h3 {
     /*background-color: lightblue;*/
     background-color: yellow;
-}*/
+}
+
+
+h4 {
+
+    font-size: x-large; 
+ }
+ 
+ 
+
+/* custom.css */
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+th {
+    background-color: #f2f2f2;  /* Set your desired background color */
+}
+
 
 /*
 body {
